--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,20 +1,20 @@
 font:
   size: 14
   normal:
-    family: SourceCode Pro
+    family: MesloLGS NF 
     style: Regular
   bold:
-    family: SourceCode Pro
+    family: MesloLGS NF 
   itaic:
-    family: SourceCode Pro
+    family: MesloLGS NF 
   bold_italic:
-    family: SourceCode Pro
+    family: MesloLGS NF 
 
 colors:
   # Default colors
   primary:
     background: '0x000000'
-    foreground: '0xf8f8f2'
+    foreground: '0xe6e6e6'
 
   # Normal colors
   normal:
@@ -39,23 +39,3 @@ colors:
     white:   '0xe6e6e6'
 
 background_opacity: 0.85
-
-key_bindings:
-    # (Windows, Linux, and BSD only)
-  - { key: V,        mods: Control|Shift, action: Paste            }
-  - { key: C,        mods: Control|Shift, action: Copy             }
-  - { key: Insert,   mods: Shift,         action: PasteSelection   }
-  - { key: Key0,     mods: Control,       action: ResetFontSize    }
-  - { key: Equals,   mods: Control,       action: IncreaseFontSize }
-  - { key: Add,      mods: Control,       action: IncreaseFontSize }
-  - { key: Subtract, mods: Control,       action: DecreaseFontSize }
-  - { key: Minus,    mods: Control,       action: DecreaseFontSize }
-
-  - { key: Paste,                    action: Paste                            }
-  - { key: Copy,                     action: Copy                             }
-  - { key: L,         mods: Control, action: ClearLogNotice                   }
-  - { key: L,         mods: Control, chars: "\x0c"                            }
-  - { key: PageUp,    mods: Shift,   action: ScrollPageUp,   mode: ~Alt       }
-  - { key: PageDown,  mods: Shift,   action: ScrollPageDown, mode: ~Alt       }
-  - { key: Home,      mods: Shift,   action: ScrollToTop,    mode: ~Alt       }
-  - { key: End,       mods: Shift,   action: ScrollToBottom, mode: ~Alt       }
