--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,14 +1,14 @@
 font:
-  size: 14
+  size: 13
   normal:
-    family: Sauce Code Pro Nerd Font Mono 
+    family: JetBrainsMono Nerd Font
     style: Regular
   bold:
-    family: Sauce Code Pro Nerd Font Mono 
+    family: JetBrainsMono Nerd Font
   itaic:
-    family: Sauce Code Pro Nerd Font Mono 
+    family: JetBrainsMono Nerd Font
   bold_italic:
-    family: Sauce Code Pro Nerd Font Mono 
+    family: JetBrainsMono Nerd Font
 
 colors:
   primary:
