--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -32,8 +32,7 @@ magenta = #BD93F9
 cyan = #8BE9FD
 white = #F8F8F2
 
-
-[bar/bar_i3]
+[bar/bar]
 width = 100%
 height = 29
 radius = 0.0
@@ -41,9 +40,6 @@ fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
-
-line-size = 3
-line-color = #FF5555
 
 border-size = 0
 
@@ -53,52 +49,13 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = Roboto Mono:pixelsize=10;1
+font-0 = Roboto Mono:pixelsize=11;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
-font-3 = Font Awesome 5 Free:pixelsize=12;2
-font-4 = Font Awesome 5 Free Solid:pixelsize=12;2
-font-5 = Font Awesome 5 Brands:pixelsize=12;2
+font-3 = Material Design Icons:pixelsize=14;2
+font-4 = Material Design Icons:pixelsize=17;2
 
-modules-left = i3
-modules-center = xwindow
-modules-right = cpu memory temperature filesystem wired-network pkgupdates-available date powermenu
-separator = |
-
-tray-position = right
-tray-padding = 2
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-[bar/bar_bspwm]
-width = 100%
-height = 29
-radius = 0.0
-fixed-center = true
-
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3
-line-color = #FF5555
-
-border-size = 0
-
-padding-left = 0
-padding-right = 2
-
-module-margin-left = 1
-module-margin-right = 2
-
-font-0 = Roboto Mono:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
-font-3 = Font Awesome 5 Free:pixelsize=12;2
-font-4 = Font Awesome 5 Free Solid:pixelsize=12;2
-font-5 = Font Awesome 5 Brands:pixelsize=12;2
-
-modules-left = bspwm
+modules-left = i3 bspwm
 modules-center = xwindow
 modules-right = cpu memory temperature filesystem wired-network pkgupdates-available date powermenu
 separator = |
@@ -118,7 +75,7 @@ interval = 25
 
 mount-0 = /home
 
-label-mounted =  %free%
+label-mounted = 󰋊 %free%
 label-unmounted = %mountpoint% not mounted
 label-mounted-foreground = ${colors.blue}
 label-unmounted-foreground = ${colors.blue}
@@ -136,60 +93,68 @@ pin-workspaces = true
 label-focused = %icon%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+label-focused-padding = 4
+label-focused-font = 5
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %icon%
-label-unfocused-padding = 2
+label-unfocused-padding = 4
+label-unfocused-font = 5
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %icon%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
+label-visible-font = 5
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %icon%
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 4
+label-urgent-font = 5
 
 ; Separator in between workspaces
 ; label-separator = |
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
+ws-icon-0 = 1;󰖟
+ws-icon-1 = 2;󰘦
+ws-icon-2 = 3;󰭹
+ws-icon-3 = 4;󰝚
+ws-icon-4 = 5;󰕧
+ws-icon-5 = 6;󰊴
+ws-icon-6 = 7;󰆍
 
 [module/bspwm]
 type = internal/bspwm
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
+ws-icon-0 = 1;󰖟
+ws-icon-1 = 2;󰘦
+ws-icon-2 = 3;󰭹
+ws-icon-3 = 4;󰝚
+ws-icon-4 = 5;󰕧
+ws-icon-5 = 6;󰊴
+ws-icon-6 = 7;󰆍
 
 label-focused = %icon%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
 label-focused-padding = 4
+label-focused-font = 5
 
 label-occupied = %icon%
 label-occupied-padding = 4
+label-occupied-font = 5
 
 label-urgent = %icon%!
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 4
+label-urgent-font = 5
 
 label-empty = %icon%
 label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 4
+label-empty-font = 5
 
 ; Separator in between workspaces
 ; label-separator = |
@@ -197,14 +162,14 @@ label-empty-padding = 4
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-label =  %percentage:2%%
+label = 󰍹 %percentage:2%%
 label-foreground = ${colors.white}
 
 [module/memory]
 type = internal/memory
 interval = 0.5
 ;format-underline = #4bffdc
-label =  %mb_used%
+label = 󰒋 %mb_used%
 label-foreground = ${colors.yellow}
 
 [module/date]
@@ -222,15 +187,15 @@ thermal-zone = 0
 warn-temperature = 60
 interval = 0.5
 
-label =  %temperature-c%
-label-warn =  %temperature-c%
+label = 󰔏 %temperature-c%
+label-warn = 󰔏 %temperature-c%
 label-warn-foreground = ${colors.red}
 label-foreground = ${colors.red}
 
 [module/wired-network]
 type = internal/network
 interface = enp4s0
-label-connected = %downspeed%   %upspeed%
+label-connected = %downspeed% 󰳛 󰳡 %upspeed%
 label-connected-foreground = ${colors.green}
 label-disconnected = No Internet
 label-disconnected-foreground = ${colors.green}
@@ -238,7 +203,7 @@ label-disconnected-foreground = ${colors.green}
 [module/pkgupdates-available]
 type = custom/script
 exec = checkupdates | wc -l
-label =  %output%
+label = 󰂚 %output%
 label-foreground = ${colors.magenta}
 interval = 60
 
