--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,23 +15,13 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 0.0;
+corner-radius = 6.0;
 rounded-corners-exclude = [
-  #"window_type = 'normal'",
-  "class_g = 'awesome'",
-  "class_g = 'URxvt'",
-  "class_g = 'XTerm'",
-  "class_g = 'kitty'",
-  "class_g = 'Alacritty'",
-  "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
-  #"class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
-  "class_g = 'Thunderbird'"
+    "class_g = 'polybar'",
 ];
-round-borders = 0;
+round-borders = 6;
 round-borders-exclude = [
-  #"class_g = 'TelegramDesktop'",
+    "class_g = 'polybar'",
 ];
 
 #################################
