--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -17,11 +17,11 @@ size-transition = true
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
 corner-radius = 6.0;
 rounded-corners-exclude = [
-    "class_g = 'polybar'",
+    "class_g = 'Polybar'",
 ];
 round-borders = 6;
 round-borders-exclude = [
-    "class_g = 'polybar'",
+    "class_g = 'Polybar'",
 ];
 
 #################################
