--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,14 +15,8 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 6.0;
-rounded-corners-exclude = [
-    "class_g = 'Polybar'",
-];
-round-borders = 6;
-round-borders-exclude = [
-    "class_g = 'Polybar'",
-];
+corner-radius = 0;
+round-borders = 0;
 
 #################################
 #             Shadows           #
@@ -146,8 +140,7 @@ fade-out-step = 0.03;
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.9;
+inactive-opacity = 1
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
