--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,6 +20,7 @@ set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
+set $ws8 "8"
 
 ##################################################################################################################
 #KEYMAPS
@@ -126,33 +127,53 @@ bindsym $mod+z mode "resize"
 ##################################################################################################################
 #THEMING AND BAR
 ##################################################################################################################
-# class                 border  bground text    indicator child_border
-client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
-client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
-client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
-client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
-client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
+set $base00 #292D3E
+set $base01 #444267
+set $base02 #32374D
+set $base03 #676E95
+set $base04 #8796B0
+set $base05 #959DCB
+set $base06 #959DCB
+set $base07 #FFFFFF
+set $base08 #F07178
+set $base09 #F78C6C
+set $base0A #FFCB6B
+set $base0B #C3E88D
+set $base0C #89DDFF
+set $base0D #82AAFF
+set $base0E #C792EA
+set $base0F #FF5370
 
-client.background       #F8F8F2
+# Basic bar configuration using the Base16 variables.
+#bar {
+#    status_command i3status
+#
+#    colors {
+#        background $base00
+#        separator  $base01
+#        statusline $base04
+#
+#        # State             Border  BG      Text
+#        focused_workspace   $base05 $base0D $base00
+#        active_workspace    $base05 $base03 $base00
+#        inactive_workspace  $base03 $base01 $base05
+#        urgent_workspace    $base08 $base08 $base00
+#        binding_mode        $base00 $base0A $base00
+#    }
+#}
+
+# Basic color configuration using the Base16 variables for windows and borders.
+# Property Name         Border  BG      Text    Indicator Child Border
+client.focused          $base05 $base0D $base00 $base0D $base0C
+client.focused_inactive $base01 $base01 $base05 $base03 $base01
+client.unfocused        $base01 $base00 $base05 $base01 $base01
+client.urgent           $base08 $base08 $base00 $base08 $base08
+client.placeholder      $base00 $base00 $base05 $base00 $base00
+client.background       $base07
 
 for_window [class=".*"] border pixel 2
 
 gaps inner 10
-
-# bar {
-        #status_command i3status
-        #colors {
-            #background #282A36
-            #statusline #F8F8F2
-            #separator  #44475A
-
-            #focused_workspace  #44475A #44475A #F8F8F2
-            #active_workspace   #282A36 #44475A #F8F8F2
-            #inactive_workspace #282A36 #282A36 #BFBFBF
-            #urgent_workspace   #FF5555 #FF5555 #F8F8F2
-            #binding_mode       #FF5555 #FF5555 #F8F8F2
-  #}
-#}
 
 ##################################################################################################################
 #WINDOW RULES
