--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -83,6 +83,15 @@ wrapping-scroll = false
 ; Only show workspaces on the same output as the bar
 pin-workspaces = true
 
+ws-icon-0 = 1;󰖟
+ws-icon-1 = 2;󰘦
+ws-icon-2 = 3;󰓇
+ws-icon-3 = 4;󰕧
+ws-icon-4 = 5;󰧨
+ws-icon-5 = 6;󰊴
+ws-icon-6 = 7;󰆍
+ws-icon-7 = 8;󰂓
+
 ; focused = Active workspace on focused monitor
 label-focused = %icon%
 label-focused-background = ${colors.background-alt}
@@ -106,14 +115,6 @@ label-urgent-padding = 4
 
 ; Separator in between workspaces
 ; label-separator = |
-
-ws-icon-0 = 1;󰖟
-ws-icon-1 = 2;󰘦
-ws-icon-2 = 3;󰭹
-ws-icon-3 = 4;󰓇
-ws-icon-4 = 5;󰕧
-ws-icon-5 = 6;󰊴
-ws-icon-6 = 7;󰆍
 
 [module/bspwm]
 type = internal/bspwm
