--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,14 +1,14 @@
 font:
   size: 12
   normal:
-    family: JetBrainsMono Nerd Font
+    family: Roboto Mono Nerd Font
     style: Regular
   bold:
-    family: JetBrainsMono Nerd Font
+    family: Roboto Mono Nerd Font
   itaic:
-    family: JetBrainsMono Nerd Font
+    family: Roboto Mono Nerd Font
   bold_italic:
-    family: JetBrainsMono Nerd Font
+    family: Roboto Mono Nerd Font
 
 colors:
   primary:
