--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -17,13 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #292d3E
-background-alt = #434758
-foreground = #D0D0D0
-foreground-alt = #D0D0D0
-primary = #FFCB5B
-secondary = #F07178
-alert = #F07178
+black = #292d3E
 red = #F07178
 green = #C3E88D
 yellow = #FFCB5B
@@ -38,8 +32,8 @@ height = 29
 radius = 0.0
 fixed-center = true
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+background = ${colors.black}
+foreground = ${colors.white}
 
 line-size=3
 
@@ -52,9 +46,7 @@ module-margin-left = 1
 module-margin-right = 2
 
 font-0 = Roboto:pixelsize=12;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
-font-3 = Material Design Icons:pixelsize=16;2
+font-1 = Material Design Icons:pixelsize=14;2
 
 modules-left = i3 bspwm xwindow
 modules-center =
@@ -80,37 +72,20 @@ format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
 
-; Only show workspaces on the same output as the bar
 pin-workspaces = true
 
-ws-icon-0 = 1;󰖟
-ws-icon-1 = 2;󰘦
-ws-icon-2 = 3;󰓇
-ws-icon-3 = 4;󰕧
-ws-icon-4 = 5;󰧨
-ws-icon-5 = 6;󰊴
-ws-icon-6 = 7;󰆍
-ws-icon-7 = 8;󰂓
-
-; focused = Active workspace on focused monitor
-label-focused = %icon%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+label-focused = 󰝥
+label-focused-foreground = ${colors.yellow}
 label-focused-padding = 4
 
-; unfocused = Inactive workspace on any monitor
-label-unfocused = %icon%
+label-unfocused = 󰝦
 label-unfocused-padding = 4
 
-; visible = Active workspace on unfocused monitor
-label-visible = %icon%
-label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = ${self.label-focused-padding}
+label-visible = 󰝥
+label-visible-padding = 4
 
-; urgent = Workspace with urgency hint set
-label-urgent = %icon%
-label-urgent-background = ${colors.alert}
+label-urgent = 󰪥
+label-urgent-foreground = ${colors.red}
 label-urgent-padding = 4
 
 ; Separator in between workspaces
@@ -119,30 +94,18 @@ label-urgent-padding = 4
 [module/bspwm]
 type = internal/bspwm
 
-ws-icon-0 = 1;󰖟
-ws-icon-1 = 2;󰘦
-ws-icon-2 = 3;󰓇
-ws-icon-3 = 4;󰕧
-ws-icon-4 = 5;󰧨
-ws-icon-5 = 6;󰊴
-ws-icon-6 = 7;󰆍
-ws-icon-7 = 8;󰂓
-
-label-focused = %icon%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.yellow}
+label-focused = 󰝥
+label-focused-foreground = ${colors.yellow}
 label-focused-padding = 4
 
-label-occupied = %icon%
-label-occupied-underline = ${colors.blue}
+label-occupied = 󰪥
 label-occupied-padding = 4
 
-label-urgent = %icon%!
-label-urgent-background = ${colors.alert}
+label-urgent = 󰪥
+label-urgent-foreground = ${colors.red}
 label-urgent-padding = 4
 
-label-empty = %icon%
-label-empty-foreground = ${colors.foreground-alt}
+label-empty = 󰝦
 label-empty-padding = 4
 
 ; Separator in between workspaces
@@ -172,7 +135,7 @@ label-muted-padding = 2
 [module/network]
 type = internal/network
 interface = wlp0s20f0u4
-label-connected = %upspeed% 󰁝 󰁅 %downspeed%
+label-connected = %downspeed% 󰁅 󰁝 %upspeed%
 label-connected-underline = ${colors.green}
 label-connected-padding = 3
 label-disconnected = 󰯡 Not Connected
