--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -25,10 +25,11 @@ blue = #82AAFF
 magenta = #C792EA
 cyan = #89DDFF
 white = #D0D0D0
+white-bright = #FFFFFF
 
 [bar/bar]
 width = 100%
-height = 29
+height = 27
 radius = 0.0
 fixed-center = true
 
@@ -75,7 +76,7 @@ wrapping-scroll = false
 pin-workspaces = true
 
 label-focused = 󰝥
-label-focused-foreground = ${colors.yellow}
+label-focused-foreground = ${colors.white-bright}
 label-focused-padding = 4
 
 label-unfocused = 󰝦
@@ -95,7 +96,7 @@ label-urgent-padding = 4
 type = internal/bspwm
 
 label-focused = 󰝥
-label-focused-foreground = ${colors.yellow}
+label-focused-foreground = ${colors.white-bright}
 label-focused-padding = 4
 
 label-occupied = 󰪥
@@ -135,7 +136,7 @@ label-muted-padding = 2
 [module/network]
 type = internal/network
 interface = wlp0s20f0u4
-label-connected = %downspeed% 󰁅 󰁝 %upspeed%
+label-connected = %downspeed% 󰁅󰁝 %upspeed%
 label-connected-underline = ${colors.green}
 label-connected-padding = 3
 label-disconnected = 󰯡 Not Connected
