Some gentoo packages changes

--- a/gentoo/make.conf
+++ b/gentoo/make.conf
@@ -10,9 +10,9 @@ FFLAGS="${COMMON_FLAGS}"
 MAKEOPTS="-j6 -l8"
 EMERGE_DEFAULT_OPTS="--jobs=6 --load-average=8"
 PORTAGE_NICENESS=1
-USE="-systemd -selinux -qt -gnome -kde -policykit -clamav -cups -nas \
+USE="-systemd -selinux -qt* -gnome -kde -policykit -clamav -cups -nas \
 	-bluetooth -perl -lua -debug -docs\
-	X emacs xft png networkmanager alsa nvidia elogind input_devices_evdev dbus"
+	X emacs xft png networkmanager alsa nvidia elogind input_devices_evdev dbus cuda"
 ACCEPT_LICENSE="* -@EULA"
 
 # NOTE: This stage was built with the bindist Use flag enabled
