--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-black = #292d3E
+black = #292D3E
 red = #F07178
 green = #C3E88D
 yellow = #FFCB5B
@@ -25,7 +25,6 @@ blue = #82AAFF
 magenta = #C792EA
 cyan = #89DDFF
 white = #D0D0D0
-white-bright = #FFFFFF
 
 [bar/bar]
 width = 100%
@@ -47,9 +46,9 @@ module-margin-left = 1
 module-margin-right = 2
 
 font-0 = Roboto:pixelsize=12;1
-font-1 = Font Awesome 5 Free:pixelsize=13;2
-font-2 = Font Awesome 5 Free Solid:pixelsize=13;2
-font-3 = Font Awesome 5 Brands:pixelsize=13;2
+font-1 = Font Awesome 5 Free:pixelsize=12;2
+font-2 = Font Awesome 5 Free Solid:pixelsize=12;2
+font-3 = Font Awesome 5 Brands:pixelsize=12;2
 
 modules-left = bspwm xwindow
 modules-center =
@@ -112,7 +111,7 @@ label-muted-padding = 3
 
 [module/network]
 type = internal/network
-interface = wlp0s20f0u4
+interface = wlp0s20f0u2
 label-connected = %downspeed%   %upspeed%
 label-connected-underline = ${colors.green}
 label-connected-padding = 3
