--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -4,4 +4,6 @@
     "workbench.productIconTheme": "material-product-icons",
     "editor.fontFamily": "'FiraCode Nerd Font'",
     "editor.fontSize": 16,
+    "explorer.confirmDelete": false,
+    "editor.minimap.enabled": false,
 }
