--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -52,8 +52,8 @@ font-3 = Font Awesome 5 Brands:pixelsize=12;2
 
 modules-left = bspwm xwindow
 modules-center =
-modules-right = network date pulseaudio
-separator = " "
+modules-right = updates network date pulseaudio
+separator = " | "
 wm-restack = bspwm
 
 tray-position = right
@@ -63,7 +63,7 @@ cursor-scroll = ns-resize
 
 [bar/bar-dwm]
 width = 100%
-height = 27
+height = 24
 radius = 0.0
 fixed-center = true
 
@@ -81,14 +81,14 @@ module-margin-left = 1
 module-margin-right = 2
 
 font-0 = Roboto:pixelsize=12;1
-font-1 = Font Awesome 5 Free:pixelsize=12;2
-font-2 = Font Awesome 5 Free Solid:pixelsize=12;2
-font-3 = Font Awesome 5 Brands:pixelsize=12;2
+font-1 = Font Awesome 5 Free Solid:pixelsize=11;2
+font-2 = Font Awesome 5 Free:pixelsize=11;2
+font-3 = Font Awesome 5 Brands:pixelsize=11;2
 
 modules-left = dwm
 modules-center =
-modules-right = network date pulseaudio
-separator = " "
+modules-right = updates network date pulseaudio
+separator = " | "
 
 tray-position = right
 tray-padding = 2
@@ -98,50 +98,50 @@ cursor-scroll = ns-resize
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
-label-padding = 2
 label-foreground = ${colors.white}
-label-underline = ${colors.magenta}
 
 [module/dwm]
 type = internal/dwm
-format = <label-tags> <label-layout> <label-floating> <label-title>
+format = <label-tags> |  <label-layout> <label-floating> <label-title>
 
 enable-tags-click = false
 enable-tags-scroll = false
 tags-scroll-empty = false
 tags-scroll-reverse = false
 tags-scroll-wrap = false
-enable-layout-click = false
-enable-layout-scroll = false
+enable-layout-click = true
+enable-layout-scroll = true
 layout-scroll-wrap = false
 layout-scroll-reverse = false
 label-foreground = {$colors.white}
 
-label-floating = F
+label-floating = [F]
+
 
 label-title = %title%
-label-title-underline = ${colors.magenta}
 
 label-layout = %symbol%
 label-layout-padding = 2
 
-label-focused = %name%
-label-focused-background = ${colors.yellow}
+label-focused = [ %name% ]
+label-focused-foreground = ${colors.yellow}
 label-focused-padding = 4
 
 label-unfocused = %name%
-label-unfocused-background = ${colors.blue}
+label-unfocused-foreground = ${colors.green}
 label-unfocused-padding = 4
 
 label-visible = %name%
-label-visible-background = ${colors.red}
+label-visible-foreground = ${colors.red}
 label-visible-padding = 4
 
 label-urgent = %name%
 label-urgent-background = ${colors.red}
+label-urgent-foreground = ${colors.white}
 label-urgent-padding = 4
 
 label-empty = %name%
+label-empty-foreground = ${colors.white}
 label-empty-padding = 4
 
 [module/bspwm]
@@ -180,29 +180,29 @@ interval = 5
 date = %b %d %Y
 time = %I:%M %p
 label = %date% - (%time%)
-label-foreground = ${colors.white}
-label-padding = 4
-label-underline = ${colors.cyan}
+label-foreground = ${colors.cyan}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 use-ui-max = false
 label-muted =  Muted
 label-volume =   %percentage%%
-label-volume-underline = ${colors.blue}
+label-volume-foreground = ${colors.blue}
 label-muted-underline = ${colors.blue}
-label-volume-padding = 2
-label-muted-padding = 3
 
 [module/network]
 type = internal/network
 interface = wlp0s20f0u2
 label-connected = %downspeed%   %upspeed%
-label-connected-underline = ${colors.green}
-label-connected-padding = 3
+label-connected-foreground = ${colors.green}
 label-disconnected = 󰯡 Not Connected
 label-disconnected-underline = ${colors.green}
-label-disconnected-padding = 3
+
+[module/updates]
+type = custom/script
+exec = "paru -Qu 2> /dev/null | wc -l"
+format =  <label> Updates
+format-foreground = ${colors.magenta}
 
 [settings]
 screenchange-reload = true
@@ -217,4 +217,3 @@ margin-top = 5
 margin-bottom = 5
 
 ; vim:ft=dosini
-
