--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -63,7 +63,7 @@ cursor-scroll = ns-resize
 
 [bar/bar-dwm]
 width = 100%
-height = 24
+height = 29
 radius = 0.0
 fixed-center = true
 
@@ -80,10 +80,10 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = Roboto:pixelsize=12;1
-font-1 = Font Awesome 5 Free Solid:pixelsize=11;2
-font-2 = Font Awesome 5 Free:pixelsize=11;2
-font-3 = Font Awesome 5 Brands:pixelsize=11;2
+font-0 = Roboto:pixelsize=15;1
+font-1 = Font Awesome 5 Free Solid:pixelsize=13;2
+font-2 = Font Awesome 5 Free:pixelsize=13;2
+font-3 = Font Awesome 5 Brands:pixelsize=13;2
 
 modules-left = dwm
 modules-center =
@@ -193,7 +193,7 @@ label-muted-foreground = ${colors.cyan}
 
 [module/network]
 type = internal/network
-interface = wlp0s20u3
+interface = wlp2s0
 label-connected = %downspeed%   %upspeed%
 label-connected-foreground = ${colors.magenta}
 label-disconnected = 󰯡 Not Connected
@@ -202,8 +202,8 @@ label-disconnected-underline = ${colors.green}
 [module/battery]
 type = internal/battery
 full-at = 99
-battery = BAT1
-adapter = ACAD
+battery = BAT0
+adapter = AC0
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
